# ultimate-rps-server

./: .gitignore  Dockerfile  README.md  config.py  database.db  database.py  docker-compose.yml  hello.py  main.py  manage.py  pyproject.toml  requirements.txt
app/: config.py  database.py  dependencies.py  main.py  middleware.py
app/auth/: __init__.py  dependencies.py  utils.py
app/core/: middleware.py
app/game/: __init__.py  game_manager.py  game_state.py  room_manager.py  state.py
app/libs/: enc_library.py
app/models/: __init__.py  db_models.py  game.py  message.py  room.py  schemas.py  user.py
app/routers/: __init__.py  auth.py  players.py  rooms.py  users.py  websocket.py  websocket_handler.py  websocket_router.py
app/schemas/: __init__.py  room.py  user.py
app/services/: game_manager.py
auth/: __init__.py  dependencies.py  utils.py
game/: __init__.py  state.py
models/: __init__.py  room.py  user.py
routers/: __init__.py  auth.py  rooms.py  users.py  websocket.py
schemas/: __init__.py  room.py  user.py
templates/: lobby.html  login.html  room.html
ultimate_rps/: asgi.py  settings.py  urls.py  wsgi.py
