[project]
name = "ultimate-rps-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.7.0",
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "channels[daphne]>=4.2.2",
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "django-rest-knox>=5.0.2",
    "rock-paper-scissors-py>=0.1.1",
    "pytest>=8.4.1",
]
