[project]
name = "ultimate-rps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "rock-paper-scissors-py>=0.1.1",
    "sqlmodel>=0.0.24",
    "websockets>=15.0.1",
]
